# xdotool

./: .gitignore  CMakeLists.txt  cmd_click.c  file.py  xdotool.c  xdotool.h
